# hvacpy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  quickstart.py  quickstart_demo.py
docs/: conf.py  index.rst  quickstart.rst
docs/modules/: assembly.rst  equipment.rst  loads.rst  psychrometrics.rst
hvacpy/: __init__.py  assembly.py  exceptions.py  units.py
hvacpy/equipment/: __init__.py  _airflow.py  _cooling.py  _duct.py  _heatpump.py  _nominal_sizes.py  _ventilation.py
hvacpy/loads/: __init__.py  _cltd_tables.py  _components.py  _cooling.py  _heating.py  _infiltration.py  _internal.py  _room.py
hvacpy/materials/: __init__.py  _database.py
hvacpy/psychrometrics/: __init__.py  _chart.py  _equations.py  _process.py
tests/: test_assembly.py  test_cooling_loads.py  test_duct_sizing.py  test_equipment_cooling.py  test_equipment_heatpump.py  test_heating_loads.py  test_internal_gains.py  test_loads_components.py  test_materials.py  test_psychrometric_chart.py  test_psychrometrics.py  test_units.py  test_ventilation.py
